--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
     <body class="text-dark-electric-blue">
         <header class="max-w-7xl lg:mx-auto relative">
-            <div class="absolute top-0 left-0 w-full max-w-[978px] h-[640px] lg:h-full bg-gradient-to-tl from-skyblue to-transparent rounded-b-3xl"></div>
-            <div class="max-w-6xl lg:min-h-[737px] mx-auto relative">
-                <div class="pt-8 lg:pt-16 mx-6 lg:m-0 flex flex-col items-center lg:items-start">
+            <div class="absolute top-0 left-0 w-full lg:max-w-[978px] h-[640px] lg:h-full bg-gradient-to-tl from-skyblue to-transparent rounded-b-3xl"></div>
+            <div class="max-w-default lg:min-h-[737px] mx-auto relative grid justify-center lg:block">
+                <div class="pt-8 lg:pt-16 mb-6 mx-6 lg:m-0 flex flex-col items-center lg:items-start">
                     <img class="size-10 lg:size-16" src="/images/logo.svg" alt="Logo" />
                 </div>
-                <div class="max-w-[564px] mx-6 md:mx-auto lg:mx-0 lg:mt-32 text-center lg:text-left flex flex-col gap-6 items-center lg:justify-self-start">
+                <div class="max-w-[686px] lg:max-w-[564px] mx-6 md:mx-auto lg:mx-0 lg:mt-32 text-center lg:text-left flex flex-col gap-6 items-center lg:justify-self-start">
                     <h1 class="text-5xl font-semibold text-gunmetal lg:text-6xl">Body Mass Index Calculator</h1>
                     <p>
                         Better understand your weight in relation to your height using our body mass index (BM) calculator. While BMI is not the sole determinant of a healthy weight, it offers a
@@ -23,9 +23,9 @@
                 </div>
 
                 <div
-                    class="lg:absolute lg:right-0 lg:top-1/2 lg:-translate-y-1/2 lg:translate-x-6 mt-6 mx-6 p-6 max-w-2xl lg:max-w-[564px] md:mx-auto space-y-6 bg-white rounded-xl shadow-2xl shadow-blue-shadow"
+                    class="lg:absolute lg:right-0 lg:top-1/2 lg:-translate-y-52 mt-12 mx-6 p-6 lg:p-8 max-w-[686px] lg:max-w-[564px] lg:mt-0 md:mx-auto space-y-6 lg:space-y-8 bg-white rounded-xl shadow-2xl shadow-blue-shadow"
                 >
-                    <form class="space-y-4 flex flex-col text-gunmetal" action="#" method="post" id="bmi_form">
+                    <form class="space-y-4 flex flex-col text-gunmetal lg:space-y-8" action="#" method="post" id="bmi_form">
                         <h3 class="text-2xl font-semibold tracking-tighter">Enter your details below</h3>
                         <fieldset class="flex text-xl font-semibold">
                             <div class="grow space-x-4 flex items-center">
@@ -109,14 +109,14 @@
             </div>
         </header>
 
-        <section class="mt-16">
-            <div class="max-w-6xl mx-auto flex flex-col gap-12 md:-ml-20 md:flex-row md:items-center lg:ml-auto">
+        <section class="mt-16 md:mt-24 lg:mt-32">
+            <div class="max-w-default mx-auto flex flex-col gap-12 md:-ml-20 md:flex-row md:items-center lg:ml-auto">
                 <div class="container mx-auto">
                     <img src="/images/image-man-eating.webp" alt="Image of man eating" />
                 </div>
                 <div class="container mx-auto px-6 flex flex-col items-start gap-8">
                     <img class="hidden self-end -mt-20 lg:block" src="/images/pattern-curved-line-left.svg" alt="" />
-                    <h2 class="text-3xl font-semibold text-gunmetal md:text-4xl">What your BMI result means</h2>
+                    <h2 class="text-3xl font-semibold text-gunmetal lg:text-5xl">What your BMI result means</h2>
                     <p>
                         A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a healthy weight may lower your chances of experiencing health issues later on, such as obesity and
                         type 2 diabetes. Aim for a nutritious diet with reduced fat and sugar content, incorporating ample fruits and vegetables. Additionally, strive for regular physical activity,
@@ -126,7 +126,7 @@
             </div>
         </section>
 
-        <section class="mx-auto max-w-[1392px] mt-16 bg-gradient-to-r from-transparent to-skyblue-soft rounded-3xl">
+        <section class="mx-auto max-w-[1392px] mt-16 md:mt-24 lg:mt-32 bg-gradient-to-r from-transparent to-skyblue-soft rounded-3xl">
             <div class="container mx-auto py-14 px-6">
                 <div class="flex flex-col gap-10 lg:flex-row">
                     <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
@@ -160,11 +160,11 @@
             </div>
         </section>
 
-        <section class="my-16">
-            <div class="container max-w-6xl mx-auto px-6">
+        <section class="my-20 md:mt-24 lg:mt-32">
+            <div class="container max-w-default mx-auto px-6">
                 <div class="grid gap-4 justify-items-center md:grid-cols-2 md:gap-y-6 lg:grid-cols-12">
                     <div class="mb-14 space-y-10 md:col-span-2 lg:col-span-6">
-                        <h2 class="text-3xl font-semibold text-center text-gunmetal md:text-4xl lg:text-left">Limitations of BMI</h2>
+                        <h2 class="text-3xl font-semibold text-center text-gunmetal lg:text-5xl lg:text-left">Limitations of BMI</h2>
                         <p class="max-w-sm text-center lg:text-left md:max-w-3xl">
                             Although BMI is often a practical indicator of healthy weight, it is not suited for every person. Specific groups should carefully consider their BMI outcomes, and in
                             certain cases, the measurement may not be beneficial to use.
