--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
         <link rel="stylesheet" href="src/sass/main.scss" />
     </head>
     <body class="text-dark-electric-blue">
-        <header class="max-w-7xl lg:mx-auto relative">
-            <div class="absolute top-0 left-0 w-full lg:max-w-[978px] h-[640px] lg:h-full bg-gradient-to-tl from-skyblue to-transparent rounded-b-3xl"></div>
-            <div class="max-w-default lg:min-h-[737px] mx-auto relative grid justify-center lg:block">
-                <div class="pt-8 lg:pt-16 mb-6 mx-6 lg:m-0 flex flex-col items-center lg:items-start">
+        <header class="max-w-outer lg:mx-auto relative">
+            <div class="absolute top-0 left-0 w-full lg:max-w-[61.125rem] h-[40rem] lg:h-full bg-gradient-to-tl from-skyblue to-transparent rounded-b-4xl"></div>
+            <div class="max-w-inner lg:min-h-[46.0625rem] mx-auto relative grid justify-center lg:block">
+                <div class="pt-8 lg:pt-[4.6875rem] mb-6 mx-6 lg:m-0 flex flex-col items-center lg:items-start">
                     <img class="size-10 lg:size-16" src="/images/logo.svg" alt="Logo" />
                 </div>
-                <div class="max-w-[686px] lg:max-w-[564px] mx-6 md:mx-auto lg:mx-0 lg:mt-32 text-center lg:text-left flex flex-col gap-6 items-center lg:justify-self-start">
-                    <h1 class="text-5xl font-semibold text-gunmetal lg:text-6xl">Body Mass Index Calculator</h1>
+                <div
+                    class="max-w-[42.875rem] lg:max-w-[29.0625rem] mx-6 md:mx-auto lg:mx-0 lg:mt-32 text-center lg:text-left flex flex-col gap-6 lg:gap-[2.1875rem] items-center lg:items-start lg:justify-self-start"
+                >
+                    <h1 class="text-5xl font-semibold text-gunmetal lg:text-[64px] leading-extra-tight tracking-tighter">
+                        Body Mass<br />
+                        Index Calculator
+                    </h1>
                     <p>
                         Better understand your weight in relation to your height using our body mass index (BM) calculator. While BMI is not the sole determinant of a healthy weight, it offers a
                         valuable starting point to evaluate your overall health and well-being.
@@ -23,29 +28,29 @@
                 </div>
 
                 <div
-                    class="lg:absolute lg:right-0 lg:top-1/2 lg:-translate-y-52 mt-12 mx-6 p-6 lg:p-8 max-w-[686px] lg:max-w-[564px] lg:mt-0 md:mx-auto space-y-6 lg:space-y-8 bg-white rounded-xl shadow-2xl shadow-blue-shadow"
+                    class="lg:absolute lg:right-0 lg:top-1/2 lg:-translate-y-[11.8rem] mt-12 mx-6 p-6 lg:p-8 max-w-[42.875rem] lg:max-w-[35.25rem] lg:mt-0 md:mx-auto space-y-6 lg:space-y-8 bg-white rounded-2xl shadow-3xl shadow-blue-shadow"
                 >
                     <form class="space-y-4 flex flex-col text-gunmetal lg:space-y-8" action="#" method="post" id="bmi_form">
-                        <h3 class="text-2xl font-semibold tracking-tighter">Enter your details below</h3>
-                        <fieldset class="flex text-xl font-semibold">
-                            <div class="grow space-x-4 flex items-center">
-                                <input class="accent-blue size-8" type="radio" name="units" id="units_metric" value="metric" checked />
+                        <h3 class="text-2xl font-semibold tracking-tighter leading-tight">Enter your details below</h3>
+                        <fieldset class="flex gap-6 font-semibold">
+                            <div class="flex-1 space-x-[1.125rem] flex items-center">
+                                <input class="accent-blue size-[1.9375rem]" type="radio" name="units" id="units_metric" value="metric" checked />
                                 <label for="units_metric">Metric</label>
                             </div>
-                            <div class="grow space-x-4 flex items-center">
-                                <input class="accent-blue size-8" type="radio" name="units" id="units_imperial" value="imperial" />
+                            <div class="flex-1 space-x-[1.125rem] flex items-center">
+                                <input class="accent-blue size-[1.9375rem]" type="radio" name="units" id="units_imperial" value="imperial" />
                                 <label for="units_imperial">Imperial</label>
                             </div>
                         </fieldset>
 
-                        <div class="flex flex-col gap-4 md:flex-row" id="units_container">
+                        <div class="flex flex-col gap-4 md:gap-6 md:flex-row" id="units_container">
                             <div class="space-y-2">
-                                <label for="height_primary">Height</label>
-                                <div class="flex gap-4">
-                                    <div class="space-y-2 grow">
+                                <label for="height_primary" class="text-sm">Height</label>
+                                <div class="flex gap-4 md:gap-6">
+                                    <div class="space-y-2 flex-1">
                                         <div class="relative">
                                             <input
-                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-lg text-2xl font-semibold"
+                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-xl text-2xl font-semibold leading-extra-tight"
                                                 type="number"
                                                 name="height"
                                                 placeholder="0"
@@ -54,10 +59,10 @@
                                             <div class="absolute top-1/2 right-6 -translate-y-1/2 text-2xl text-blue font-semibold">cm</div>
                                         </div>
                                     </div>
-                                    <div class="space-y-2 grow hidden" id="height_secondary_container">
+                                    <div class="space-y-2 flex-1 hidden" id="height_secondary_container">
                                         <div class="relative">
                                             <input
-                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-lg text-2xl font-semibold"
+                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-xl text-2xl font-semibold leading-extra-tight"
                                                 type="number"
                                                 name="height"
                                                 placeholder="0"
@@ -70,12 +75,12 @@
                             </div>
 
                             <div class="space-y-2">
-                                <label for="weight_primary">Weight</label>
-                                <div class="flex gap-4">
-                                    <div class="space-y-2 grow">
+                                <label for="weight_primary" class="text-sm">Weight</label>
+                                <div class="flex gap-4 md:gap-6">
+                                    <div class="space-y-2 flex-1">
                                         <div class="relative">
                                             <input
-                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-lg text-2xl font-semibold"
+                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-xl text-2xl font-semibold leading-extra-tight"
                                                 type="number"
                                                 name="height"
                                                 placeholder="0"
@@ -84,10 +89,10 @@
                                             <div class="absolute top-1/2 right-6 -translate-y-1/2 text-2xl text-blue font-semibold">kg</div>
                                         </div>
                                     </div>
-                                    <div class="space-y-2 grow hidden" id="weight_secondary_container">
+                                    <div class="space-y-2 flex-1 hidden" id="weight_secondary_container">
                                         <div class="relative">
                                             <input
-                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-lg text-2xl font-semibold"
+                                                class="block w-full px-6 py-5 border border-dark-electric-blue rounded-xl text-2xl font-semibold leading-extra-tight"
                                                 type="number"
                                                 name="height"
                                                 placeholder="0"
@@ -102,21 +107,21 @@
                     </form>
 
                     <div class="p-8 bg-blue rounded-xl text-white md:rounded-r-[100px]" id="bmi_container">
-                        <h2 class="mb-4 text-4xl font-semibold">Welcome</h2>
-                        <p>Enter your height and weight and you'll see your BMI result here</p>
+                        <h2 class="mb-4 text-2xl font-semibold tracking-tighter">Welcome!</h2>
+                        <p class="text-sm">Enter your height and weight and you'll see your BMI result here</p>
                     </div>
                 </div>
             </div>
         </header>
 
-        <section class="mt-16 md:mt-24 lg:mt-32">
-            <div class="max-w-default mx-auto flex flex-col gap-12 md:-ml-20 md:flex-row md:items-center lg:ml-auto">
+        <section class="mt-20 md:mt-24 lg:mt-16">
+            <div class="lg:max-w-inner mx-auto flex flex-col gap-12 lg:gap-[8.1875rem] md:-ml-20 md:flex-row md:items-center lg:ml-auto">
                 <div class="container mx-auto">
-                    <img src="/images/image-man-eating.webp" alt="Image of man eating" />
+                    <img class="lg:max-w-[564px]" src="/images/image-man-eating.webp" alt="Image of man eating" />
                 </div>
-                <div class="container mx-auto px-6 flex flex-col items-start gap-8">
+                <div class="container mx-auto px-6 flex flex-col items-start gap-8 lg:px-0">
                     <img class="hidden self-end -mt-20 lg:block" src="/images/pattern-curved-line-left.svg" alt="" />
-                    <h2 class="text-3xl font-semibold text-gunmetal lg:text-5xl">What your BMI result means</h2>
+                    <h2 class="text-3xl font-semibold text-gunmetal lg:text-5xl leading-extra-tight tracking-tighter">What your BMI result means</h2>
                     <p>
                         A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a healthy weight may lower your chances of experiencing health issues later on, such as obesity and
                         type 2 diabetes. Aim for a nutritious diet with reduced fat and sugar content, incorporating ample fruits and vegetables. Additionally, strive for regular physical activity,
@@ -126,33 +131,33 @@
             </div>
         </section>
 
-        <section class="mx-auto max-w-[1392px] mt-16 md:mt-24 lg:mt-32 bg-gradient-to-r from-transparent to-skyblue-soft rounded-3xl">
-            <div class="container mx-auto py-14 px-6">
-                <div class="flex flex-col gap-10 lg:flex-row">
-                    <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
+        <section class="mx-auto max-w-outer mt-16 md:mt-24 bg-gradient-to-r from-transparent to-skyblue-soft rounded-b-4xl">
+            <div class="container lg:max-w-inner mx-auto py-14 px-6 lg:px-0 lg:pt-[4.5rem] lg:pb-24">
+                <div class="flex flex-col gap-10 lg:gap-8 lg:flex-row">
+                    <div class="flex flex-col flex-1 gap-8 lg:gap-[2.8125rem] md:flex-row lg:flex-col">
                         <div class="md:self-center lg:self-auto">
                             <img src="/images/icon-eating.svg" alt="Bowl with food icon" />
                         </div>
                         <div class="space-y-6">
-                            <h3 class="text-2xl font-semibold text-gunmetal">Healthy eating</h3>
+                            <h3 class="text-2xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Healthy eating</h3>
                             <p>Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.</p>
                         </div>
                     </div>
-                    <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
+                    <div class="flex flex-col flex-1 gap-8 lg:gap-[2.8125rem] md:flex-row lg:flex-col">
                         <div class="md:self-center lg:self-auto">
                             <img src="/images/icon-exercise.svg" alt="Dumbell icon" />
                         </div>
                         <div class="space-y-6">
-                            <h3 class="text-2xl font-semibold text-gunmetal">Regular exercise</h3>
+                            <h3 class="text-2xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Regular exercise</h3>
                             <p>Exercise improves fitness, aids weight control, elevates mood, and reduces disease risk, fostering wellness and longevity.</p>
                         </div>
                     </div>
-                    <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
+                    <div class="flex flex-col flex-1 gap-8 lg:gap-[2.8125rem] md:flex-row lg:flex-col">
                         <div class="md:self-center lg:self-auto">
                             <img src="/images/icon-sleep.svg" alt="Moon icon" />
                         </div>
                         <div class="space-y-6">
-                            <h3 class="text-2xl font-semibold text-gunmetal">Adequate sleep</h3>
+                            <h3 class="text-2xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Adequate sleep</h3>
                             <p>Sleep enhances mental clarity, emotional stability, and physical wellness, promoting overall restoration and rejuvenation.</p>
                         </div>
                     </div>
@@ -161,10 +166,10 @@
         </section>
 
         <section class="my-20 md:mt-24 lg:mt-32">
-            <div class="container max-w-default mx-auto px-6">
-                <div class="grid gap-4 justify-items-center md:grid-cols-2 md:gap-y-6 lg:grid-cols-12">
+            <div class="container lg:max-w-inner mx-auto px-6 lg:px-0">
+                <div class="grid gap-4 justify-items-center md:grid-cols-2 md:gap-y-6 lg:gap-x-8 lg:grid-cols-12">
                     <div class="mb-14 space-y-10 md:col-span-2 lg:col-span-6">
-                        <h2 class="text-3xl font-semibold text-center text-gunmetal lg:text-5xl lg:text-left">Limitations of BMI</h2>
+                        <h2 class="text-3xl font-semibold text-center text-gunmetal lg:text-5xl lg:text-left leading-extra-tight tracking-tighter">Limitations of BMI</h2>
                         <p class="max-w-sm text-center lg:text-left md:max-w-3xl">
                             Although BMI is often a practical indicator of healthy weight, it is not suited for every person. Specific groups should carefully consider their BMI outcomes, and in
                             certain cases, the measurement may not be beneficial to use.
@@ -176,28 +181,28 @@
                     </div>
 
                     <!-- Cards -->
-                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-8">
+                    <div class="max-w-sm p-6 md:p-8 space-y-4 bg-white rounded-2xl shadow-3xl shadow-blue-shadow lg:col-span-4 lg:col-start-8">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-gender.svg" alt="Gender icon" />
                             <h4 class="text-xl font-semibold text-gunmetal">Gender</h4>
                         </div>
                         <p>The development and body fat composition of girls and boys vary with age. Consequently, a child's age and gender are considered when evaluating their BMI.</p>
                     </div>
-                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-5 lg:row-start-2">
+                    <div class="max-w-sm p-6 md:p-8 space-y-4 bg-white rounded-2xl shadow-3xl shadow-blue-shadow lg:col-span-4 lg:col-start-5 lg:row-start-2">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-age.svg" alt="Birthday cake icon" />
                             <h4 class="text-xl font-semibold text-gunmetal">Age</h4>
                         </div>
                         <p>In aging individuals, increased body fat and muscle loss may cause BMI to underestimate body fat content.</p>
                     </div>
-                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-9 lg:row-start-2">
+                    <div class="max-w-sm p-6 md:p-8 space-y-4 bg-white rounded-2xl shadow-3xl shadow-blue-shadow lg:col-span-4 lg:col-start-9 lg:row-start-2">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-muscle.svg" alt="Flexing biceps icon" />
                             <h4 class="text-xl font-semibold text-gunmetal">Muscle</h4>
                         </div>
                         <p>BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
                     </div>
-                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-3 lg:row-start-3">
+                    <div class="max-w-sm p-6 md:p-8 space-y-4 bg-white rounded-2xl shadow-3xl shadow-blue-shadow lg:col-span-4 lg:col-start-3 lg:row-start-3">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-pregnancy.svg" alt="Baby icon" />
                             <h4 class="text-xl font-semibold text-gunmetal">Pregnancy</h4>
@@ -206,7 +211,7 @@
                             Expectant mothers experience weight gain due to their growing baby. Maintaining a healthy pre-pregnancy BMI is advisable to minimise health risks for both mother and child.
                         </p>
                     </div>
-                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow md:col-span-2 lg:col-span-4 lg:row-start-3">
+                    <div class="max-w-sm p-6 md:p-8 space-y-4 bg-white rounded-2xl shadow-3xl shadow-blue-shadow md:col-span-2 lg:col-span-4 lg:row-start-3">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-race.svg" alt="Generic human icon" />
                             <h4 class="text-xl font-semibold text-gunmetal">Race</h4>
