--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </p>
                 </div>
 
-                <div
+                <main
                     class="lg:absolute lg:right-0 lg:top-1/2 lg:-translate-y-[11.8rem] mt-12 mx-6 p-6 lg:p-8 max-w-[42.875rem] lg:max-w-[35.25rem] lg:mt-0 md:mx-auto space-y-6 lg:space-y-8 bg-white rounded-2xl shadow-3xl shadow-blue-shadow"
                 >
                     <form class="space-y-4 flex flex-col text-gunmetal lg:space-y-8" action="#" method="post" id="bmi_form">
-                        <h3 class="heading-tertiary leading-tight">Enter your details below</h3>
+                        <h2 class="heading-tertiary leading-tight">Enter your details below</h2>
                         <fieldset class="flex gap-6 font-semibold">
                             <div class="flex-1 space-x-[1.125rem] flex items-center">
                                 <input class="accent-blue size-[1.9375rem]" type="radio" name="units" id="units_metric" value="metric" checked />
@@ -110,11 +110,11 @@
                         <h2 class="mb-4 text-2xl font-semibold tracking-tighter">Welcome!</h2>
                         <p class="text-sm">Enter your height and weight and you'll see your BMI result here</p>
                     </div>
-                </div>
+                </main>
             </div>
         </header>
 
-        <section class="mt-20 md:mt-24 lg:mt-16">
+        <section class="mt-20 md:mt-24 lg:mt-16" role="contentinfo">
             <div class="lg:max-w-inner mx-auto flex flex-col gap-12 lg:gap-[8.1875rem] md:-ml-20 md:flex-row md:items-center lg:ml-auto relative">
                 <img class="hidden absolute right-0 top-0 -translate-x-7 -translate-y-[3.25rem] lg:block" src="/images/pattern-curved-line-left.svg" alt="" />
                 <div class="container mx-auto">
@@ -131,7 +131,7 @@
             </div>
         </section>
 
-        <section class="mx-auto max-w-outer mt-16 md:mt-24 bg-gradient-to-r from-transparent to-skyblue-soft rounded-b-4xl">
+        <section class="mx-auto max-w-outer mt-16 md:mt-24 bg-gradient-to-r from-transparent to-skyblue-soft rounded-b-4xl" role="contentinfo">
             <div class="container lg:max-w-inner mx-auto py-14 px-6 lg:px-0 lg:pt-[4.5rem] lg:pb-24">
                 <div class="flex flex-col gap-10 lg:gap-8 lg:flex-row">
                     <div class="flex flex-col flex-1 gap-8 lg:gap-[2.8125rem] md:flex-row lg:flex-col">
@@ -165,7 +165,7 @@
             </div>
         </section>
 
-        <section class="my-20 md:mt-24 lg:mt-[7.6rem]">
+        <section class="my-20 md:mt-24 lg:mt-[7.6rem]" role="contentinfo">
             <div class="container lg:max-w-inner mx-auto px-6 lg:px-0">
                 <div class="grid gap-4 justify-items-center md:grid-cols-2 md:gap-y-6 lg:gap-x-8 lg:grid-cols-12">
                     <div class="mb-14 space-y-10 md:col-span-2 lg:col-span-6">
@@ -184,28 +184,28 @@
                     <div class="card lg:col-span-4 lg:col-start-8">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-gender.svg" alt="Gender icon" />
-                            <h4 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Gender</h4>
+                            <h3 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Gender</h3>
                         </div>
                         <p>The development and body fat composition of girls and boys vary with age. Consequently, a child's age and gender are considered when evaluating their BMI.</p>
                     </div>
                     <div class="card lg:col-span-4 lg:col-start-5 lg:row-start-2">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-age.svg" alt="Birthday cake icon" />
-                            <h4 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Age</h4>
+                            <h3 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Age</h3>
                         </div>
                         <p>In aging individuals, increased body fat and muscle loss may cause BMI to underestimate body fat content.</p>
                     </div>
                     <div class="card lg:col-span-4 lg:col-start-9 lg:row-start-2">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-muscle.svg" alt="Flexing biceps icon" />
-                            <h4 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Muscle</h4>
+                            <h3 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Muscle</h3>
                         </div>
                         <p>BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
                     </div>
                     <div class="card lg:col-span-4 lg:col-start-3 lg:row-start-3">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-pregnancy.svg" alt="Baby icon" />
-                            <h4 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Pregnancy</h4>
+                            <h3 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Pregnancy</h3>
                         </div>
                         <p>
                             Expectant mothers experience weight gain due to their growing baby. Maintaining a healthy pre-pregnancy BMI is advisable to minimise health risks for both mother and child.
@@ -214,7 +214,7 @@
                     <div class="card md:col-span-2 lg:col-span-4 lg:row-start-3">
                         <div class="flex items-center gap-4">
                             <img src="/images/icon-race.svg" alt="Generic human icon" />
-                            <h4 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Race</h4>
+                            <h3 class="text-xl font-semibold text-gunmetal leading-extra-tight tracking-tighter">Race</h3>
                         </div>
                         <p>
                             Certain health concerns may affect individuals of some Black and Asian origins at lower BMIs than others. To learn more, it is advised to discuss this with your GP or
